# dev-pipeline

./: .gitignore  README.md  geocoding.py  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/commands/: dev-plan.md
.claude/workflows/: dev-pipeline.js
.cursor/skills/dev-pipeline/: SKILL.md  schemas.md
.cursor/skills/dev-pipeline-commit/: SKILL.md
.cursor/skills/dev-pipeline-implement/: SKILL.md
.cursor/skills/dev-pipeline-red-check/: SKILL.md
.cursor/skills/dev-pipeline-review/: SKILL.md
.cursor/skills/dev-pipeline-run-tests/: SKILL.md
.cursor/skills/dev-pipeline-write-tests/: SKILL.md
.cursor/skills/dev-plan/: SKILL.md
pipeline/: README.md  package-lock.json  package.json  tsconfig.json
pipeline/src/: cli.ts  dev-pipeline.ts  logger.ts  prompts.ts  schemas.ts  test-runner.ts
pipeline/src/agents/: cli-agents.ts  index.ts  parse-json.ts  types.ts
plans/address-geocode-endpoint/: plan.md
plans/distance-calculator/: plan.md  result.md
plans/fastapi-health-server/: plan.md  tasks.md
plans/feature/: plan.md
plans/health-version-endpoint/: plan.md  result.md
src/app/: geocoding.py  main.py  version.py
tests/: helpers.py  test_distance.py  test_geocode.py  test_health.py
workflow-app/: package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
workflow-app/server/: agent-transcript.ts  claude-path.ts  discover.ts  index.ts  parse-completed.ts  parse-live.ts  types.ts  utils.ts
workflow-app/src/: App.tsx  api.ts  styles.css  types.ts
workflow-app/src/components/: AgentPanel.tsx  (+5 more)
