[project]
name = "fastapi-health-server"
version = "0.1.0"
description = "Minimal FastAPI server with a /health endpoint"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "geopy>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "geocoding.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.27.0",
]
